Added createPaymentLink Controller
